--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Street Food</title>
 </head>
 <body>
-    
+    <div class="Home">
+        <div>
+            <ul>
+                <li> <link rel="stylesheet" href="#Home">Home</li>
+                <li> <link rel="stylesheet" href="#About">About</li>
+                <li> <link rel="stylesheet" href="#Our Menu">Our Menu</li>
+                <li> <link rel="stylesheet" href="#Happy Hour">Happy Hour</li>
+                <li> <img src="https://i.pinimg.com/originals/8e/10/56/8e10565c12656c5d008e58f1cec2853e.png" alt="Star icon" height="50px"></li>
+                <li> <link rel="stylesheet" href="#Catering">Catering</li>
+                <li> <link rel="stylesheet" href="#Reservation">Reservation</li>
+                <li> <link rel="stylesheet" href="#Gallary">Gallary</li>
+                <li> <link rel="stylesheet" href="#Contact">Contact</li>
+            </ul>
+        </div>
+
+    </div>
 </body>
 </html>
