--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Street Food</title>
 </head>
+<link rel="stylesheet" href="index.css">
 <body>
     <div class="Home">
-        <div>
+        <div class="mine">
             <ul>
                 <li> <link rel="stylesheet" href="#Home">Home</li>
                 <li> <link rel="stylesheet" href="#About">About</li>
@@ -21,7 +22,15 @@
                 <li> <link rel="stylesheet" href="#Contact">Contact</li>
             </ul>
         </div>
-
     </div>
+   <div class="feast">
+       <h3><span class="street">Street</span> <span class="food">Food</span></h3>
+<h4>We don't play with food</h4>
+<p>When I was a small boy,my father told <br>
+    me never to recommend a church or a woman <br>
+    to anyone. And I have found it wise not to <br>
+    recommend a restaurant either. Something <br>
+    always goes wrong with the cheese souffle <br></p>
+   </div> 
 </body>
 </html>
