index.html -mindex.css

--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
     to anyone. And I have found it wise not to <br>
     recommend a restaurant either. Something <br>
     always goes wrong with the cheese souffle <br></p>
+    <input class="order" type="button" value="Order Now">
    </div> 
+   <div class="menu">
+       <div class="meal">
+           <img src="/Assets/eating_together.png" height="600px">
+       </div>
+       <div class="kula">
+           <h2> <span class="eat">Eat</span> <span class="tog">together</span></h2>
+           <p>There is something profoundly satistfying <br>
+            about sharing a meal. Eating together,<br>
+            Breaking the bread together,is one of the <br>
+            oldest and the most fundamentally unifying of <br>
+            human experiences <br></p>
+       </div>
+   </div>
 </body>
 </html>
