--- a/index.html
+++ b/index.html
@@ -46,5 +46,37 @@
             human experiences <br></p>
        </div>
    </div>
+ <div class="explo">
+     <p>Explore <span class="chat"> Menu </span></p>
+ </div>
+ <div class="posh">
+<div class="mill">
+<img src="/Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" height="150">
+<h4> Burger Name</h4>
+<p>
+    There is something <br>
+profoundly <br>
+satistfying about sharing a meal <br>
+</p>
+</div>
+<div class="mill">
+    <img src="/Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" height="150">
+    <h4> Burger Name</h4>
+    <p>
+        There is something <br>
+    profoundly <br>
+    satistfying about sharing a meal <br>
+    </p>
+    </div>
+    <div class="mill">
+        <img src="/Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" height="150">
+        <h4> Burger Name</h4>
+        <p>
+            There is something <br>
+        profoundly <br>
+        satistfying about sharing a meal <br>
+        </p>
+        </div>
+ </div>
 </body>
 </html>
