--- a/index.html
+++ b/index.html
@@ -78,5 +78,44 @@ satistfying about sharing a meal <br>
         </p>
         </div>
  </div>
+ <div class="pearl">
+    <div class="mill">
+    <img src="/Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" height="150">
+    <h4> Burger Name</h4>
+    <p>
+        There is something <br>
+    profoundly <br>
+    satistfying about sharing a meal <br>
+    </p>
+    </div>
+    <div class="mill">
+        <img src="/Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" height="150">
+        <h4> Burger Name</h4>
+        <p>
+            There is something <br>
+        profoundly <br>
+        satistfying about sharing a meal <br>
+        </p>
+        </div>
+        <div class="mill">
+            <img src="/Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" height="150">
+            <h4> Burger Name</h4>
+            <p>
+                There is something <br>
+            profoundly <br>
+            satistfying about sharing a meal <br>
+            </p>
+            </div>
+     </div>
+     <div class="hot">
+<h4> Hot<span class="my"> Deals</span><h4>
+    <div class="deals">
+        <img src="/Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" height="600">
+        <img class="salad" src="/Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png">
+        <div>
+            <h2><span class="most">SPECIAL COMBO PACK</span></h2>
+        </div>
+</div>
+     </div>
 </body>
 </html>
