--- a/index.html
+++ b/index.html
@@ -114,8 +114,30 @@ satistfying about sharing a meal <br>
         <img class="salad" src="/Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png">
         <div>
             <h2><span class="most">SPECIAL COMBO PACK</span></h2>
+            <p>
+             Burger Pizz <br>
+                Fries & Drinks <br>
+                There is something profoundly satistfying <br>
+                about sharing a meal. Eating together, <br>
+                Breaking the bread together,is one of the <br>
+                oldest and the most fundamentally unifying of <br>
+                human experiences <br>
+            </p>
         </div>
 </div>
      </div>
+     <div class="info"> 
+<div>
+    <h4> Contact<span class="us">Us</span></h4>
+<p> There is something profoundly satistfying <br>
+    about sharing a meal. Eating together, <br>
+    Breaking the bread together,is one of the <br>
+    oldest and the most fundamentally unifying of <br>
+    human experiences <br></p>
+    <input class="email" type="button" pattern="email" value="Email">
+    <input class="tuma" type="button" value="Send">
+</div>
+     </div>
+     <div></div>
 </body>
 </html>
