--- a/index.html
+++ b/index.html
@@ -137,7 +137,24 @@ satistfying about sharing a meal <br>
     <input class="email" type="button" pattern="email" value="Email">
     <input class="tuma" type="button" value="Send">
 </div>
+     </div> 
+     <hr>
+
+     <div class="footer">
+         <footer>
+            Sunday-Thursday 
+            4-PPM <br>
+            Friday-Saturday
+            4-10PM <br>
+            (423) 266-1121 <br>
+            801 Chestnut Street I
+            chattanooga TN 37402 <br>
+            FOLLoW
+            GET THE LATEST NEWS SINGN UP
+            FOR OUR NEWSLETTERS
+            @Website design <br>
+            <img class="icon" src="/Assets/NicePng_black-square-png_150003.png" height="30">
+         </footer>
      </div>
-     <div></div>
 </body>
 </html>
