--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@ satistfying about sharing a meal <br>
             FOR OUR NEWSLETTERS
             @Website design <br>
             <img class="icon" src="/Assets/NicePng_black-square-png_150003.png" height="30">
-         </footer>
+        <input class="order" type="button" value="Send"> 
+        </footer>
      </div>
 </body>
 </html>
