--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li> <link rel="stylesheet" href="#About">About</li>
                 <li> <link rel="stylesheet" href="#Our Menu">Our Menu</li>
                 <li> <link rel="stylesheet" href="#Happy Hour">Happy Hour</li>
-                <li> <img src="https://i.pinimg.com/originals/8e/10/56/8e10565c12656c5d008e58f1cec2853e.png" alt="Star icon" height="50px"></li>
+                <li> <img src="https://i.pinimg.com/originals/8e/10/56/8e10565c12656c5d008e58f1cec2853e.png" alt="Star icon" height="50px"><p>Street Food</p></li>
                 <li> <link rel="stylesheet" href="#Catering">Catering</li>
                 <li> <link rel="stylesheet" href="#Reservation">Reservation</li>
                 <li> <link rel="stylesheet" href="#Gallary">Gallary</li>
@@ -108,6 +108,22 @@ satistfying about sharing a meal <br>
             </div>
      </div>
      <div class="hot">
+        <div class="juice">
+        <img src="Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" height="600px">
+     <img class="salad" src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="burger" > 
+    </div>
+        <h2 class="center">Hot <span style="color: #649549;">Deals</span></h2>
+      <div class="special"><h4>SPECIAL COMBO PACK</h4>
+        <H5>Burger Pizz <br> fries & Drinks</H5>
+         <p>There is something profoundly satisfying <br>
+            about sharing a meal, eating together, <br>
+            breaking bread together, is one of the <br>
+            oldest and most fundamentally unifying of <br>
+            human experinces.</p>
+        </div>
+    </div>
+
+     <!-- <div class="hot">
 <h4> Hot<span class="my"> Deals</span><h4>
     <div class="deals">
         <img src="/Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" height="600">
@@ -125,7 +141,7 @@ satistfying about sharing a meal <br>
             </p>
         </div>
 </div>
-     </div>
+     </div> -->
      <div class="info"> 
 <div>
     <h4> Contact<span class="us">Us</span></h4>
@@ -140,22 +156,34 @@ satistfying about sharing a meal <br>
      </div> 
      <hr>
 
-     <div class="footer">
+     <!-- <div class="footer"> -->
          <footer>
-            Sunday-Thursday 
-            4-PPM <br>
-            Friday-Saturday
-            4-10PM <br>
-            (423) 266-1121 <br>
-            801 Chestnut Street I
-            chattanooga TN 37402 <br>
-            FOLLoW
-            GET THE LATEST NEWS SINGN UP
-            FOR OUR NEWSLETTERS
-            @Website design <br>
-            <img class="icon" src="/Assets/NicePng_black-square-png_150003.png" height="30">
-        <input class="order" type="button" value="Send"> 
+             <div class="footer">
+                 <div class="here">
+                   <h6 class="pt"> Sunday-Thursday</h6>
+                   <p>4pm</p>
+                <h6> Friday- Sunday</h6>
+                <p> 4-10PM</p>
+                </div>
+
+                <div class="after">
+                    <h6 class="pt">(423) 266-1121 </h6>
+                    <p> 801 Chestnut Street I
+                        chattanooga TN 37402 </p>
+                </div>
+
+                <div class=" come">
+                    <h6 class="pt">FOLLOW <br></h6> 
+                        <p> GET THE LATEST NEWS SINGN UP <br>
+                        FOR OUR NEWSLETTERS <br>
+                        @Website design</p>
+                </div>
+        
+            <img src="/Assets/NicePng_black-square-png_150003.png" height="" class=" sema">
+        <button class="back" type="button"> Send </button>
+        </div>
         </footer>
-     </div>
+
+     <!-- </div> -->
 </body>
 </html>
