--- a/index.html
+++ b/index.html
@@ -110,38 +110,20 @@ satistfying about sharing a meal <br>
      <div class="hot">
         <div class="juice">
         <img src="Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" height="600px">
-     <img class="salad" src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="burger" > 
+     <img class="salad" src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="250px">
     </div>
-        <h2 class="center">Hot <span style="color: #649549;">Deals</span></h2>
-      <div class="special"><h4>SPECIAL COMBO PACK</h4>
-        <H5>Burger Pizz <br> fries & Drinks</H5>
+      <div class="la"> <h2>Hot <span class="most">Deals</span></h2></div>
+      <div class="ali"><h4>SPECIAL COMBO PACK</h4>
+        <h5>Burger Pizz <br> fries & Drinks</h5>
          <p>There is something profoundly satisfying <br>
             about sharing a meal, eating together, <br>
             breaking bread together, is one of the <br>
             oldest and most fundamentally unifying of <br>
             human experinces.</p>
+            </div>
         </div>
-    </div>
 
-     <!-- <div class="hot">
-<h4> Hot<span class="my"> Deals</span><h4>
-    <div class="deals">
-        <img src="/Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" height="600">
-        <img class="salad" src="/Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png">
-        <div>
-            <h2><span class="most">SPECIAL COMBO PACK</span></h2>
-            <p>
-             Burger Pizz <br>
-                Fries & Drinks <br>
-                There is something profoundly satistfying <br>
-                about sharing a meal. Eating together, <br>
-                Breaking the bread together,is one of the <br>
-                oldest and the most fundamentally unifying of <br>
-                human experiences <br>
-            </p>
-        </div>
-</div>
-     </div> -->
+ 
      <div class="info"> 
 <div>
     <h4> Contact<span class="us">Us</span></h4>
