--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ satistfying about sharing a meal <br>
             </div>
      </div>
      <div class="hot">
-        <div class="juice">
-        <img src="Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" height="600px">
-     <img class="salad" src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="250px">
+        <div class="bev">
+        <img src="Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" height="300px">
+     <img class="salad" src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150px">
     </div>
       <div class="la"> <h2>Hot <span class="most">Deals</span></h2></div>
       <div class="ali"><h4>SPECIAL COMBO PACK</h4>
