--- a/index.html
+++ b/index.html
@@ -46,7 +46,61 @@
             human experiences <br></p>
        </div>
    </div>
- <div class="explo">
+   <div class="explore">
+    <h2>Explore <span class="chat">Menu</span></h2>
+     <div class="mill">
+         <div>
+             <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
+             <h3 class="mon">Burger Name</h3>
+             <p> There is something <br>
+                profoundly <br>
+                satisfying <br>
+                about sharing a meal <br> 
+            </p>
+         </div>
+         <div>
+            <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
+            <h3 class="tue">Burger Name</h3>
+            <p> There is something <br>
+                profoundly <br>
+                satisfying <br>
+                about sharing a meal <br> </p>
+        </div>
+        <div>
+            <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
+            <h3 class="wed">Burger Name</h3>
+            <p> There is something <br>
+                profoundly <br>
+                satisfying about <br>
+                sharing a meal <br> </p>
+        </div>
+        <div>
+            <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
+            <h3 class="thu">Burger Name</h3>
+            <p> There is something<br> 
+                profoundly<br>
+                 satisfying <br>
+                 about sharing a meal <br> </p>
+        </div>
+        <div>
+            <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
+            <h3 class="fri">Burger Name</h3>
+            <p> There is something<br>
+                 profoundly <br>
+                 satisfying<br> 
+                 about sharing a meal <br> </p>
+        </div>
+        <div>
+            <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
+            <h3 class="sat">Burger Name</h3>
+            <p> There is something<br>
+                 profoundly<br> 
+                 satisfying <br>
+                 about sharing a meal <br> </p>
+        </div>
+     </div>
+ </div>
+ <!-- <div class="explo">
      <p>Explore <span class="chat"> Menu </span></p>
  </div>
  <div class="posh">
@@ -106,7 +160,7 @@ satistfying about sharing a meal <br>
             satistfying about sharing a meal <br>
             </p>
             </div>
-     </div>
+     </div> -->
      <div class="hot">
         <div class="bev">
         <img src="Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" height="300px">
@@ -161,7 +215,7 @@ satistfying about sharing a meal <br>
                         @Website design</p>
                 </div>
         
-            <img src="/Assets/NicePng_black-square-png_150003.png" height="" class=" sema">
+            <img src="/Assets/NicePng_black-square-png_150003.png" height="30px" class=" sema">
         <button class="back" type="button"> Send </button>
         </div>
         </footer>
