--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 profoundly <br>
                 satisfying about <br>
                 sharing a meal <br> </p>
-        </div>
+        </div> 
+     </div>
+     <div class="explo 2"> 
         <div>
             <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
             <h3 class="thu">Burger Name</h3>
