--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 sharing a meal <br> </p>
         </div> 
      </div>
-     <div class="explo 2"> 
+     <div class="explo"> 
         <div>
             <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
             <h3 class="thu">Burger Name</h3>
