--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        </div>
    </div>
    <div class="explore">
-    <h2>Explore <span class="chat">Menu</span></h2>
+   <div class="pg"> <h2>Explore <span class="chat">Menu</span></h2></div>
      <div class="mill">
          <div>
              <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
