Assets/design.png

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="index.css">
 <body>
     <div class="Home">
+        <div class="png" style="background-image: url('Assets/design.png');">
         <div class="mine">
             <ul>
                 <li> <link rel="stylesheet" href="#Home">Home</li>
@@ -33,6 +34,7 @@
     always goes wrong with the cheese souffle <br></p>
     <input class="order" type="button" value="Order Now">
    </div> 
+   </div>
    <div class="menu">
        <div class="meal">
            <img src="/Assets/eating_together.png" height="600px">
