--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    </div>
    <div class="menu">
        <div class="meal">
-           <img src="/Assets/eating_together splash.png"height="600px">
+           <img src="/Assets/eating_together splash.png"height="150">
        </div>
        <div class="kula">
            <h2> <span class="eat">Eat</span> <span class="tog">together</span></h2>
