--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    </div>
    <div class="menu">
        <div class="meal">
-           <img src="https://drive.google.com/file/d/1awy4BBKavtfZtulG95r1x0myopUSOZkd.png"height="600">
+           <img src="https://drive.google.com/file/d/1awy4BBKavtfZtulG95r1x0myopUSOZkd/view?usp=sharing"height="600">
        </div>
        <div class="kula">
            <h2> <span class="eat">Eat</span> <span class="tog">together</span></h2>
