--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    </div>
    <div class="menu">
        <div class="meal">
-           <img src="Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" height="600px">
+           <img src="/Assets/eating_together splash.png" height="650px">
        </div>
        <div class="kula">
            <h2> <span class="eat">Eat</span> <span class="tog">together</span></h2>
@@ -51,15 +51,15 @@
    <div class="explore">
    <div class="pg"> <h2>Explore <span class="chat">Menu</span></h2></div>
      <div class="mill">
-        <div>
-            <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
-            <h3 class="mon">Burger Name</h3>
-            <p> There is something <br>
-               profoundly <br>
-               satisfying <br>
-               about sharing a meal <br> 
-           </p>
-        </div>
+         <div>
+             <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
+             <h3 class="mon">Burger Name</h3>
+             <p> There is something <br>
+                profoundly <br>
+                satisfying <br>
+                about sharing a meal <br> 
+            </p>
+         </div>
          <div>
             <img src="Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" height="150" class="image">
             <h3 class="tue">Burger Name</h3>
