--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
    </div> 
    </div>
    <div class="menu">
-       <div class="meal">
+       <!-- <div class="meal">
            <img src="/Assets/eat.png" height="650px">
            <img src="https://drive.google.com/file/d/1awy4BBKavtfZtulG95r1x0myopUSOZkd/view?usp=sharing"height="600">
 
            <img src="/Assets/eat.png">
-       </div>
+        </div> -->
+        <div class="meal">
+            <img src="./Assets/eat.png"  height="600px">
+        </div>
        <div class="kula">
            <h2> <span class="eat">Eat</span> <span class="tog">together</span></h2>
            <p>There is something profoundly satistfying <br>
